--- a/src/BootstrapBlazorApp.Server/Components/Pages/Index.razor
+++ b/src/BootstrapBlazorApp.Server/Components/Pages/Index.razor
@@ -8,3 +8,36 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<button Id="changeColorBtn" type="button" class="btn btn-outline-danger">Change Color</button>
+
+<script>
+    // 获取按钮元素
+    var changeColorBtn = document.getElementById('changeColorBtn');
+
+    // 定义一个函数来改变按钮颜色
+    function changeButtonColor() {
+      // 随机生成一个新的颜色值
+      var newColor = '#' + Math.floor(Math.random()*16777215).toString(16);
+
+      // 修改CSS变量
+      document.documentElement.style.setProperty('--bbt-header-color-a', newColor);
+    }
+
+    // 为按钮添加点击事件监听器
+    changeColorBtn.addEventListener('click', changeButtonColor);
+</script>
+<br />
+<br />
+<ColorPicker @bind-Value="@HandColor" IsSupportOpacity="true" OnValueChanged="OnColorChanged" />
+
+@code {
+    private string? HandColor { get; set; } = "#a108e7";
+
+    private async Task OnColorChanged(string color)
+    {
+        HandColor = color;
+        await js.InvokeVoidAsync("setCssProperty", "--bbt-header-color-a", color);
+    }
+
+}
