--- a/src/BootstrapBlazorApp.Server/wwwroot/css/app.css
+++ b/src/BootstrapBlazorApp.Server/wwwroot/css/app.css
@@ -1,27 +1,17 @@
-﻿@supports not selector(::-webkit-scrollbar) {
+﻿:root {
+    --bbt-header-color-a: #15b56b;
+    --bbt-header-color-b: #409eff;
+    --bbt-color-angle: 90deg;
+    --bbt-footer-color-a: #15b56b;
+    --bbt-footer-color-b: #409eff;
+}
+
+@supports not selector(::-webkit-scrollbar) {
     .scroll {
         scrollbar-color: rgba(0,0,0,0.3) rgba(0,0,0,0);
         scrollbar-width: thin;
     }
 }
-#blazor-error-ui {
-    background: lightyellow;
-    bottom: 0;
-    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
-    display: none;
-    left: 0;
-    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
-    position: fixed;
-    width: 100%;
-    z-index: 1080;
-}
-
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
 
 .page-layout-demo-footer-link {
     color: #ebeef5;
@@ -261,7 +251,7 @@
 
 .color6,
 .layout.is-page.color6 .layout-header { /*头部颜色*/
-    background: linear-gradient(to right,#15b56b 0%,#409eff 100%);
+    background: linear-gradient(var(--bbt-color-angle),var(--bbt-header-color-a),var(--bbt-header-color-b));
     /*background-image: linear-gradient( 274deg, rgb(5, 39, 103) 0%, #3a0647 70%);*/
 }
 
@@ -277,7 +267,7 @@
 
 .layout.is-page.color6 .layout-footer { /*页脚颜色*/
     /*background-color: #343a40;*/
-    background: linear-gradient(to right,#15b56b 0%,#409eff 100%);
+    background: linear-gradient(var(--bbt-color-angle),var(--bbt-header-color-a),var(--bbt-header-color-b));
 }
 
 .layout.is-page.color6 .layout-header-bar { /*开关则边栏按钮颜色*/
@@ -538,6 +528,7 @@ input[type=search]::-webkit-search-cancel-button {
 
 .layout.is-page .layout-side .layout-menu {
     height: auto !important;
+    border-right:0px;
 }
 
 .layout.is-page .layout-user-state {
