--- a/src/BootstrapBlazorApp.Server/Components/App.razor
+++ b/src/BootstrapBlazorApp.Server/Components/App.razor
@@ -2,7 +2,7 @@
 @inject IStringLocalizer<App> Localizer
 
 <!DOCTYPE html>
-<html lang="en" data-bs-theme='light'>
+<html data-bs-theme='light'>
 
 <head>
     <meta charset="utf-8" />
